<resources>
    <string name="app_name">Contact List</string>
    <string name="searcher_hint">Busca un contacto</string>
    <string name="searcher_empty">No se encontraron resultados</string>
    <string name="generic_error_message">Ocurrio un error, favor de intentarlo mas tarde</string>
    <string name="add_contact">Agregar contacto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_title">Nombre</string>
    <string name="father_lastname_title">Apellido paterno</string>
    <string name="mother_lastname_title">Apellido materno</string>
    <string name="age_title">Edad</string>
    <string name="phone_title">Numero telefonico</string>
    <string name="gender_title">Genero</string>
    <string name="save_contact_title">Guardar contacto</string>
    <string name="update_contact_title">Actualizar contacto</string>
    <string name="delete_contact_title">Eliminar contacto</string>
</resources>